k8s/apps/gitlab/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
        - name: gitlab
          image: gitlab/gitlab-ce:17.1.1-ce.0
          ports:
            - containerPort: 80
            - containerPort: 22
          resources:
            requests:
              cpu: "500m"
              memory: "2Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
          volumeMounts:
            - name: gitlab-config
              mountPath: /etc/gitlab
            - name: gitlab-data
              mountPath: /var/opt/gitlab
            - name: gitlab-logs
              mountPath: /var/log/gitlab
      volumes:
        - name: gitlab-config
          persistentVolumeClaim:
            claimName: gitlab-config-pvc
        - name: gitlab-data
          persistentVolumeClaim:
            claimName: gitlab-data-pvc
        - name: gitlab-logs
          persistentVolumeClaim:
            claimName: gitlab-logs-pvc
